Update contents, style, and media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   /*===== Font and typography =====*/
   --body-font: "Poppins", sans-serif;
   --biggest-font-size: 2.5rem;
+  --big-font-size: 3.125rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1.125rem;
@@ -46,6 +47,7 @@
 @media screen and (min-width: 768px) {
   :root {
     --biggest-font-size: 4.5rem;
+    --big-font-size: 3.125rem;
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
@@ -286,7 +288,7 @@ img {
 }
 
 .home__name {
-  font-size: var(--biggest-font-size);
+  font-size: var(--big-font-size);
 }
 
 .home__greeting,
@@ -302,6 +304,8 @@ img {
 .home__profession {
   font-size: 0.938rem;
   margin-bottom: var(--mb-3);
+  font-size: var(--h1-font-size);
+  font-weight: var(--font-semi-bold);
 }
 
 .home__img {
@@ -373,11 +377,15 @@ img {
   text-align: center;
 }
 
+.about__description {
+  text-align: left;
+}
+
 .about__description span {
   font-size: var(--h2-font-size);
   font-weight: var(--font-semi-bold);
   color: var(--first-color);
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .about__number {
@@ -388,7 +396,7 @@ img {
 
 .about__img {
   justify-self: center;
-  width: 220px;
+  width: 330px;
   border-radius: 0.5rem;
   background-color: var(--first-color-dark);
 }
@@ -740,7 +748,8 @@ img {
   }
 
   .home__profession {
-    font-size: 2rem;
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-semi-bold);
   }
 
   .home__social {
@@ -754,7 +763,7 @@ img {
   }
 
   .home__img img {
-    width: 540px;
+    width: 440px;
     align-self: center;
   }
 
@@ -812,10 +821,15 @@ img {
   }
 
   .about__description {
-    text-align: intial;
+    text-align: left;
   }
 
   .qualification__container {
     column-gap: 6rem;
+  }
+
+  .home__img img {
+    width: 540px;
+    align-self: center;
   }
 }
