--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ img {
   left: 0;
   width: 65%;
   height: 3px;
-  background-color: var(--first-color-light);
+  /* background-color: var(--first-color-light); */
 }
 
 /* ===== CHANGE BACKGROUND HEADER ====== */
@@ -497,6 +497,7 @@ img {
 
 .portfolio__img {
   width: 100%;
+  height: 165px;
   transition: 0.4s;
 }
 
@@ -505,7 +506,7 @@ img {
 }
 
 .portfolio__subtitle {
-  font-size: var(--small-font-size);
+  font-size: var(--smaller-font-size);
   color: var(--first-color-light);
 }
 
@@ -513,6 +514,12 @@ img {
   font-size: var(--h3-font-size);
   color: var(--first-color);
   margin: var(--mb-2) 0;
+}
+
+.portfolio__desc {
+  margin-bottom: 20px;
+  text-decoration: none;
+  color: var(--first-color);
 }
 
 .portfolio__content:hover {
@@ -647,6 +654,7 @@ img {
   background-color: var(--first-color-dark);
   color: var(--first-color-lighten);
   text-align: center;
+  margin-top: 6rem;
 }
 
 .footer__container {
